[gd_scene load_steps=4 format=3 uid="uid://odixs4lfin43"]

[ext_resource type="Script" uid="uid://c0uqklpub5ajc" path="res://scenes/speed_of_light_engine_test.gd" id="1_ao6n5"]
[ext_resource type="Script" uid="uid://cg5xd8ac6qfkb" path="res://scenes/big_test.gd" id="1_y0mfh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y0mfh"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y0mfh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
script = ExtResource("1_ao6n5")

[node name="Mass" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Mass: 0"

[node name="HSliderMass" type="HSlider" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxEmpty_y0mfh")

[node name="Joules" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Joules per second: 0"

[node name="HSlider2Joules" type="HSlider" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxEmpty_y0mfh")

[node name="Velocity" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Meters per second: 0"

[node name="HSlider3Velocity" type="HSlider" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
